# jetdiff

./: .gitignore  CMakeLists.txt  pyproject.toml
examples/: bal.py
jetdiff/: __init__.py  block.py  cjet.cc  func.py  jet.py  jetfunc.py  nbjet.py
jetdiff/jet/: __init__.py  cjet.cc  pyjet.py
