[project]
name = "jetdiff"
version = "0.0.0"
authors = [{ name = "Yienschwen" }]
description = "Simple auto-differentiate helper library"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["numpy", "scipy"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Yienschwen/jetdiff"

[build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"